@@ -230,7 +230,8 @@
         <string id="33329">Aucune connexion possible avec le maître réseau !</string>
         <string id="33330">Aucune connexion du client n'a été effectuée !</string>
         <string id="33331">Répertoire IPHONE non trouvé ou non inscriptible !</string> 
-        <string id="33332">Répertoire PSP non trouvé ou non inscriptible !</string>  
+        <string id="33332">Répertoire PSP non trouvé ou non inscriptible !</string> 
+        <string id="33333">Défaut mkv besoin les fonctions Blu-ray</string>   
   
            
         # Warning : do not modify this id !!!!   
