@@ -231,7 +231,8 @@
         <string id="33329">Keine Verbindung zum Netzwerk Master möglich !</string>
         <string id="33330">Keine Verbindung durch eine Client erstellt !</string> 
         <string id="33331">IPHONE-Verzeichniss nicht gefunden oder beschreibbar !</string> 
-        <string id="33332">PSP-Verzeichniss nicht gefunden oder beschreibbar !</string>      
+        <string id="33332">PSP-Verzeichniss nicht gefunden oder beschreibbar !</string> 
+        <string id="33333">Standard mkv benötigt Bluray-Funktionen</string>      
  
          # Warning : do not modify this id !!!! 
 
